--- a/src/Components/TweetCreator.css
+++ b/src/Components/TweetCreator.css
@@ -39,3 +39,8 @@
   width: 70%;
   font-size: 15px;
 }
+@media only screen and (max-width: 400px) {
+  .tweet-input-container {
+    width: 90%;
+  }
+}
