--- a/src/Components/LoginForm.css
+++ b/src/Components/LoginForm.css
@@ -6,3 +6,13 @@
   align-items: flex-start;
   margin-top: 30px;
 }
+
+.nav-paragraph {
+  color: lightblue;
+  width: 100%;
+  font-size: 16px;
+}
+
+.nav-paragraph:hover {
+  cursor: pointer;
+}
